--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://Ju6y.github.io
 title: iBlog
-subtitle: A blogging framework for hackers.
+subtitle: 
 author: Ju6y
 simple_search: http://google.com/search
 description:
